change image url

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="nav--side__container">
           <img
             class="header__mobileLogo"
-            src="/images/logo-bookmark-mobile.svg"
+            src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-bookmark-mobile_adbqmm.svg"
             alt="Logo Mobile"
           />
-          <img class="header__logo" src="/images/logo-bookmark.svg" alt="Logo" />
+          <img class="header__logo" src="https://res.cloudinary.com/staefloded/image/upload/v1604909699/logo-bookmark_cdg82p.svg" alt="Logo" />
           <button class="header--nav__toggle">
             <i class="fas fa-bars"></i>
           </button>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="showcase__right">
-            <img class="showcase__image" src="images/illustration-hero.svg" alt="" />
+            <img class="showcase__image" src="https://res.cloudinary.com/staefloded/image/upload/v1604909699/illustration-hero_trcjhw.svg" alt="" />
           </div>
         </div>
       </section>
@@ -106,7 +106,7 @@
               <div class="features__tabImg--block">
                 <img
                   class="features__tabImg"
-                  src="/images/illustration-features-tab-1.svg"
+                  src="https://res.cloudinary.com/staefloded/image/upload/v1604909699/illustration-features-tab-1_zxkjbi.svg"
                   alt=""
                 />
               </div>
@@ -124,7 +124,7 @@
               <div class="features__tabImg--block">
                 <img
                   class="features__tabImg"
-                  src="/images/illustration-features-tab-2.svg"
+                  src="https://res.cloudinary.com/staefloded/image/upload/v1604909699/illustration-features-tab-2_hphr6l.svg"
                   alt=""
                 />
               </div>
@@ -142,7 +142,7 @@
               <div class="features__tabImg--block">
                 <img
                   class="features__tabImg"
-                  src="/images/illustration-features-tab-3.svg"
+                  src="https://res.cloudinary.com/staefloded/image/upload/v1604909699/illustration-features-tab-3_y2r3rk.svg"
                   alt=""
                 />
               </div>
@@ -171,26 +171,26 @@
 
           <div class="extension__body">
             <div class="extension--browser">
-              <img src="/images/logo-chrome.svg" alt="Chrome" />
+              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-chrome_w4ct7b.svg" alt="Chrome" />
               <h4 class="extention--text">Add to Chrome</h4>
               <span>Minimum version 62</span>
-              <img src="/images/bg-dots.svg" alt="Dot" />
+              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909697/bg-dots_ahg1mf.svg" alt="Dot" />
               <a href="#" class="btn btn-blue">Add & Install Extension</a>
             </div>
 
             <div class="extension--browser">
-              <img src="/images/logo-firefox.svg" alt="Chrome" />
+              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-firefox_fnttfu.svg" alt="Chrome" />
               <h4 class="extention--text">Add to Firefox</h4>
               <span>Minimum version 55</span>
-              <img src="/images/bg-dots.svg" alt="Dot" />
+              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909697/bg-dots_ahg1mf.svg" alt="Dot" />
               <a href="#" class="btn btn-blue">Add & Install Extension</a>
             </div>
 
             <div class="extension--browser">
-              <img src="/images/logo-opera.svg" alt="Chrome" />
+              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-opera_uughgl.svg" alt="Chrome" />
               <h4 class="extention--text">Add to Opera</h4>
               <span>Minimum version 46</span>
-              <img src="/images/bg-dots.svg" alt="Dot" />
+              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909697/bg-dots_ahg1mf.svg" alt="Dot" />
               <a href="#" class="btn btn-blue">Add & Install Extension</a>
             </div>
           </div>
@@ -336,7 +336,7 @@
         <div class="container">
           <div class="footer__bottom--container">
             <div class="footer__bottom--left">
-              <img src="/images/logo-bookmark-footer.svg" alt="Footer Logo" />
+              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-bookmark-footer_ctpzao.svg" alt="Footer Logo" />
               <a href="#">Features</a>
               <a href="#">Pricing</a>
               <a href="#">Contact</a>
