--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-bookmark-mobile_adbqmm.svg"
             alt="Logo Mobile"
           />
-          <img class="header__logo" src="https://res.cloudinary.com/staefloded/image/upload/v1604909699/logo-bookmark_cdg82p.svg" alt="Logo" />
+          <img
+            class="header__logo"
+            src="https://res.cloudinary.com/staefloded/image/upload/v1604909699/logo-bookmark_cdg82p.svg"
+            alt="Logo"
+          />
           <button class="header--nav__toggle">
             <i class="fas fa-bars"></i>
           </button>
@@ -52,7 +56,7 @@
     <main>
       <section class="showcase my-15">
         <div class="bluebg-right"></div>
-     
+
         <div class="container grid-2">
           <div class="showcase__left">
             <h1>A Simple Bookmark Manager</h1>
@@ -66,7 +70,11 @@
             </div>
           </div>
           <div class="showcase__right">
-            <img class="showcase__image" src="https://res.cloudinary.com/staefloded/image/upload/v1604909699/illustration-hero_trcjhw.svg" alt="" />
+            <img
+              class="showcase__image"
+              src="https://res.cloudinary.com/staefloded/image/upload/v1604909699/illustration-hero_trcjhw.svg"
+              alt=""
+            />
           </div>
         </div>
       </section>
@@ -171,26 +179,44 @@
 
           <div class="extension__body">
             <div class="extension--browser">
-              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-chrome_w4ct7b.svg" alt="Chrome" />
+              <img
+                src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-chrome_w4ct7b.svg"
+                alt="Chrome"
+              />
               <h4 class="extention--text">Add to Chrome</h4>
               <span>Minimum version 62</span>
-              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909697/bg-dots_ahg1mf.svg" alt="Dot" />
+              <img
+                src="https://res.cloudinary.com/staefloded/image/upload/v1604909697/bg-dots_ahg1mf.svg"
+                alt="Dot"
+              />
               <a href="#" class="btn btn-blue">Add & Install Extension</a>
             </div>
 
             <div class="extension--browser">
-              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-firefox_fnttfu.svg" alt="Chrome" />
+              <img
+                src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-firefox_fnttfu.svg"
+                alt="Chrome"
+              />
               <h4 class="extention--text">Add to Firefox</h4>
               <span>Minimum version 55</span>
-              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909697/bg-dots_ahg1mf.svg" alt="Dot" />
+              <img
+                src="https://res.cloudinary.com/staefloded/image/upload/v1604909697/bg-dots_ahg1mf.svg"
+                alt="Dot"
+              />
               <a href="#" class="btn btn-blue">Add & Install Extension</a>
             </div>
 
             <div class="extension--browser">
-              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-opera_uughgl.svg" alt="Chrome" />
+              <img
+                src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-opera_uughgl.svg"
+                alt="Chrome"
+              />
               <h4 class="extention--text">Add to Opera</h4>
               <span>Minimum version 46</span>
-              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909697/bg-dots_ahg1mf.svg" alt="Dot" />
+              <img
+                src="https://res.cloudinary.com/staefloded/image/upload/v1604909697/bg-dots_ahg1mf.svg"
+                alt="Dot"
+              />
               <a href="#" class="btn btn-blue">Add & Install Extension</a>
             </div>
           </div>
@@ -336,7 +362,10 @@
         <div class="container">
           <div class="footer__bottom--container">
             <div class="footer__bottom--left">
-              <img src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-bookmark-footer_ctpzao.svg" alt="Footer Logo" />
+              <img
+                src="https://res.cloudinary.com/staefloded/image/upload/v1604909701/logo-bookmark-footer_ctpzao.svg"
+                alt="Footer Logo"
+              />
               <a href="#">Features</a>
               <a href="#">Pricing</a>
               <a href="#">Contact</a>
