--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 
     <header class="header">
       <div class="container flex nav">
-         <a href="index.html"><img class="header__logo" src="/images/logo-bookmark.svg" alt="Logo" /></a> 
+         <a href="index.html"><img class="header__logo" src="https://res.cloudinary.com/staefloded/image/upload/v1604909699/logo-bookmark_cdg82p.svg" alt="Logo" /></a> 
     </header>
     <div class="contact-form">
       <div class="contact-container">
